kubernetes/manifestos/02_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - image: pfabianofilho/jenkins-jolokia:1.0.0
        name: jenkins-jolokia
        ports:
          - name: web
            containerPort: 8080
          - name: jolokia-metrics
            containerPort: 8778
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 1.0
            memory: 2Gi
        imagePullPolicy: IfNotPresent
        startupProbe:
          httpGet:
            port: web
            path: /jenkins/health
            scheme: HTTP  
          failureThreshold: 18
          periodSeconds: 10
        readinessProbe:
          httpGet: 
            port: web
            path: /jenkins/health
            scheme: HTTP  
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 2
        livenessProbe:
          httpGet: 
            port: web
            path: /jenkins/health
            scheme: HTTP    
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 2
