kubernetes/manifestos/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
      name: web
      targetPort: 8080
      protocol: TCP
    - port: 8778
      name: jolokia-metrics
      targetPort: 8778
      protocol: TCP
  type: ClusterIP
