kubernetes/manifestos/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: jenkins
  namespace: jenkins
spec: 
  rules:
    - host: jenkins.192.168.122.22.nip.io
      http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port: 
                  number: 8080
